--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "fumadocs-mdx": "^14.2.6",
     "fumadocs-ui": "^16.4.11",
     "lucide-react": "^0.563.0",
-    "motion": "^12.29.2",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "rehype-autolink-headings": "^7.1.0",
